policy.yaml
---
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: noroot
spec:
  crd:
    spec:
      names:
        kind: NoRoot
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |-
      package noroot

      violation[{"msg": msg}] {
        not input.review.object.spec.template.spec.securityContext.runAsNonRoot
        msg := "Containers must not run as root"
      }
